--- a/CountLib/CountLib.csproj
+++ b/CountLib/CountLib.csproj
@@ -6,7 +6,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="libraries\" />
+    <Compile Remove="libraries\**" />
+    <EmbeddedResource Remove="libraries\**" />
+    <None Remove="libraries\**" />
   </ItemGroup>
 
 </Project>
